
syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-endorser/platform/fabricx/core/fabricx/committer/v1/protoblocktx";

package protoblocktx_rc_0_1;

// Represents a block in the blockchain.
message Block {
    uint64 number = 1; // The block number.
    repeated Tx txs = 2; // List of transactions within the block.
    repeated uint32 txs_num = 3; // Transaction number within the block generated by the orderer.
}

// Represents a transaction in the blockchain.
message Tx {
    string id = 1; // The transaction ID.
    repeated TxNamespace namespaces = 2; // Namespaces associated with the transaction.
    repeated bytes signatures = 3; // signature per namespace.
}

// Represents a namespace within a transaction.
message TxNamespace {
    uint32 ns_id = 1; // The namespace ID. Only 256 namespaces are supported, i.e., from 0 to 255.
    // as variable-length encoding is used to serialize the namespace ID, it would occupy 1 byte only.
    bytes ns_version = 2; // The version of the namespace.
    repeated Read reads_only = 3; // List of read only operations within the namespace.
    repeated ReadWrite read_writes = 4; // List of read-write operations within the namespace.
    repeated Write blind_writes = 5; // List of blind write operations within the namespace.
}

// Represents a read operation.
message Read {
    bytes key = 1; // The key being read.
    bytes version = 2; // The version of the key being read.
}

// Represents a read-write operation.
message ReadWrite {
    bytes key = 1; // The key involved in the read-write operation.
    // If the key is empty, the key would be constructed using the txID
    // and the index of the read-write operation.
    bytes version = 2; // The version of the key being read and written.
    bytes value = 3; // The value associated with the key being written.
}

// Represents a write operation.
message Write {
    bytes key = 1; // The key being written.
    // If the key is empty, the key would be constructed using the txID
    // and the index of the read-write operation.
    bytes value = 2; // The value associated with the key being written.
}

// Represents a namespace policy.
message NamespacePolicy {
    string scheme = 1; // The scheme for signature verification.
    bytes public_key = 2; // The public key for signature verification.
}

message BlockInfo {
    uint64 number = 1;
}

message QueryStatus {
    repeated string txIDs = 1;
}

message TransactionsStatus {
    map<string, StatusWithHeight> status = 1;
}

message StatusWithHeight {
    Status code = 1;
    uint64 block_number = 2;
    uint32 tx_number = 3;
}

enum Status {
    COMMITTED = 0;
    ABORTED_MVCC_CONFLICT = 1;
    ABORTED_DUPLICATE_TXID = 2;
    ABORTED_SIGNATURE_INVALID = 3;
    ABORTED_MISSING_TXID = 4;
    ABORTED_DUPLICATE_NAMESPACE = 5;
    ABORTED_NAMESPACE_POLICY_INVALID = 6;
    ABORTED_NAMESPACE_ID_INVALID = 7;
    ABORTED_MISSING_NAMESPACE_VERSION = 8;
    ABORTED_BLIND_WRITES_NOT_ALLOWED = 9;
    ABORTED_NO_WRITES = 10;
}
